Modify infra alert map to use new alert API

--- a/htdocs/css/custom.css
+++ b/htdocs/css/custom.css
@@ -76,6 +76,14 @@ hr {
 	background-color: lime;
 }
 
+.INFORM {
+  background-color: lime;
+}
+
+.DEBUG {
+  background-color: gray;
+}
+
 .table tbody tr:hover td.zero, .zero {
 	background-color: #ddd;
 }
