Add OPEN ACK CLOSED status counts to console

--- a/htdocs/css/custom.css
+++ b/htdocs/css/custom.css
@@ -69,6 +69,10 @@ table.summary {
   background-color: #ccc;
 }
 
+#status-counts {
+  margin-left: 0px;
+}
+
 #from-date-select {
   width: 150px;
 }
