--- a/dashboard/v2/css/custom.css
+++ b/dashboard/v2/css/custom.css
@@ -8,49 +8,46 @@ table {
     background-color: #ffffff;
     font-weight: normal;
 }
-/*
-td.align-center {
-    text-align:center
-}
-*/
 
 .table tbody tr:hover td,
 .table tbody tr:hover th {
   background-color: transparent;
 }
 
-.Critical {
+#status-counts {
+    margin-top:14px;
+}
+.severity-Critical {
   background-color: red;
 }
 
-.Major {
+.severity-Major {
   background-color: orange;
 }
 
-.Minor {
+.severity-Minor {
 	background-color: yellow;
 }
 
-.Warning {
+.severity-Warning {
   background-color: #1E90FF; // dodger-blue
 }
 
-.Normal {
+.severity-Normal {
   background-color: #00CC00;
 }
 
-.Informational {
+.severity-Informational {
   background-color: #00CC00;
 }
 
-.Debug {
+.severity-Debug {
   background-color: #7554BF;
 }
 
-.Closed {
+.status-Closed {
   background-color: rgba(0, 0, 0, 0.5);
 }
-
 
 .label {
     font-size: 10.998px;
@@ -70,20 +67,6 @@ td.align-center {
     border-radius: 3px;
 }
 
-.badge {
-    padding: 1px 9px 2px;
-    -webkit-border-radius: 9px;
-    -moz-border-radius: 9px;
-    border-radius: 9px;
-}
-/*
-a.label:hover,
-a.badge:hover {
-    color: #ffffff;
-    text-decoration: none;
-    cursor: pointer;
-}
-*/
 .label-critical {
     background-color: #b94a48;
 }
@@ -108,12 +91,3 @@ a.badge:hover {
     background-color: #333333;
 }
 
-/*
-tr.odd {
-    background-color: #E2E4FF;
-}
-
-tr.even {
-    background-color: white;
-}
-*/
