--- a/alerta/api/v2/templates/about.html
+++ b/alerta/api/v2/templates/about.html
@@ -3,19 +3,19 @@
     <!-- link href='http://fonts.googleapis.com/css?family=Sintony:400,700' rel='stylesheet' type='text/css' -->
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="assets/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="/alerta/dashboard/v2/assets/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
 
-    <script type="text/javascript" language="javascript" src="assets/DataTables/media/js/jquery.js"></script>
+    <script type="text/javascript" language="javascript" src="/alerta/dashboard/v2/assets/DataTables/media/js/jquery.js"></script>
 
-    <link href="assets/bootstrap/css/bootstrap.css" rel="stylesheet">
-    <link href="assets/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="/alerta/dashboard/v2/assets/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="/alerta/dashboard/v2/assets/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
     <style type="text/css">
         body {
             padding-top: 60px;
             padding-bottom: 40px;
         }
     </style>
-    <link href="assets/css/custom.css" rel="stylesheet">
+    <link href="/alerta/dashboard/v2/assets/css/custom.css" rel="stylesheet">
 
 </head>
 
@@ -29,12 +29,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </a>
-            <a class="brand" href="./index.html">Alert Console</a>
+            <a class="brand" href="/alerta/dashboard/v2/index.html">Alert Console</a>
             <div class="nav-collapse">
                 <ul class="nav">
-                    <li class=""><a href="index.html">Production</a></li>
-                    <li class=""><a href="dev.html">Development</a></li>
-                    <li class=""><a href="infra.html">Infrastructure</a></li>
+                    <li class=""><a href="/alerta/dashboard/v2/index.html">Production</a></li>
+                    <li class=""><a href="/alerta/dashboard/v2/dev.html">Development</a></li>
+                    <li class=""><a href="/alerta/dashboard/v2/infra.html">Infrastructure</a></li>
                     <li class=""><a href="/Kibana">History</a></li>
                     <li class="active"><a href="about.html">About</a></li>
                 </ul>
