--- a/alerta/api/v2/templates/dev.html
+++ b/alerta/api/v2/templates/dev.html
@@ -3,20 +3,20 @@
     <!-- link href='http://fonts.googleapis.com/css?family=Sintony:400,700' rel='stylesheet' type='text/css' -->
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="assets/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="/alerta/dashboard/v2/assets/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
 
-    <script type="text/javascript" language="javascript" src="assets/DataTables/media/js/jquery.js"></script>
-    <script type="text/javascript" language="javascript" src="assets/DataTables/media/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" language="javascript" src="/alerta/dashboard/v2/assets/DataTables/media/js/jquery.js"></script>
+    <script type="text/javascript" language="javascript" src="/alerta/dashboard/v2/assets/DataTables/media/js/jquery.dataTables.min.js"></script>
 
-    <link href="assets/bootstrap/css/bootstrap.css" rel="stylesheet">
-    <link href="assets/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="/alerta/dashboard/v2/assets/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="/alerta/dashboard/v2/assets/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
     <style type="text/css">
         body {
             padding-top: 40px;
             padding-bottom: 40px;
         }
     </style>
-    <link href="assets/css/custom.css" rel="stylesheet">
+    <link href="/alerta/dashboard/v2/assets/css/custom.css" rel="stylesheet">
 
 </head>
 
@@ -32,8 +32,8 @@
             <a class="brand" href="index.html">Alert Console</a>
             <div class="nav-collapse">
                 <ul class="nav">
-                    <li class="active"><a href="index.html">Production</a></li>
-                    <li class=""><a href="dev.html">Development</a></li>
+                    <li class=""><a href="index.html">Production</a></li>
+                    <li class="active"><a href="./dev.html">Development</a></li>
                     <li class=""><a href="infra.html">Infrastructure</a></li>
                     <li class=""><a href="/Kibana">History</a></li>
                     <li class=""><a href="about.html">About</a></li>
@@ -299,12 +299,12 @@
 </div>
 <!-- end container -->
 
-<script src="assets/js/console.js"></script>
+<script src="/alerta/dashboard/v2/assets/js/console.js"></script>
 
 <script>
     $(document).ready(function() {
 
-        var env_filter = '&environment=PROD|INFRA';
+        var env_filter = '&environment=RELEASE|QA|TEST|CODE|DEV|GUDEV|STAGE|LWP';
         var asiFilters = {
             'R2R1':             '&service=R2|R1',
             'FrontendMobile':   '&service=Frontend|Mobile',
