--- a/alerta/api/v2/templates/infra.html
+++ b/alerta/api/v2/templates/infra.html
@@ -299,6 +299,10 @@
 </div>
 <!-- end container -->
 
+<script>
+    var api_port = {{ config['api_port'] }};
+</script>
+
 <script src="/alerta/dashboard/v2/assets/js/console.js"></script>
 
 <script>
