Implements a hacky opacity trick to indicate what is being used in the filter

--- a/dashboard/v2/assets/css/custom.css
+++ b/dashboard/v2/assets/css/custom.css
@@ -26,6 +26,7 @@ table {
 
 .status-indicator, #alerts {
     cursor: pointer;
+    transition: opacity .4s;
 }
 
 .status-indicator {
@@ -123,3 +124,4 @@ table {
 td {
     white-space: nowrap;
 }
+
