Switch to using classes to control the visuals

--- a/dashboard/v2/assets/css/custom.css
+++ b/dashboard/v2/assets/css/custom.css
@@ -29,6 +29,14 @@ table {
     transition: opacity .4s;
 }
 
+.status-indicator.current-filter {
+    opacity: 1;
+}
+
+.status-indicator-inactive {
+    opacity: 0.4;
+}
+
 .status-indicator {
     font-size: 14px;
 }
