Switch to fluid rows and add some margin between rows

--- a/alerta/api/v2/templates/index.html
+++ b/alerta/api/v2/templates/index.html
@@ -103,7 +103,7 @@
 
 
     {% block status_indicators %}   
-    <div class="row show-grid status-indicators">
+    <div class="row-fluid show-grid status-indicators">
         <div class="span12">
 
             <div class="row show-grid">
@@ -261,7 +261,7 @@
     {% endblock %}
 
     <!-- Alert Details -->
-    <div class="row show-grid">
+    <div class="row-fluid show-grid">
         <div class="span12">
 
             <table cellpadding="0" cellspacing="0" border="0" class="display table table-bordered table-condensed"
