Creates a first stab at being responsive

--- a/alerta/api/v2/templates/index.html
+++ b/alerta/api/v2/templates/index.html
@@ -264,8 +264,7 @@
     <div class="row-fluid show-grid">
         <div class="span12">
 
-            <table cellpadding="0" cellspacing="0" border="0" class="display table table-bordered table-condensed"
-                   id="alerts">
+            <table cellpadding="0" cellspacing="0" border="0" class="display table table-bordered table-condensed alerts-display" id="alerts">
                 <thead>
                 <tr>
                     <th>Severity</th>
