--- a/alerta/api/v2/templates/index.html
+++ b/alerta/api/v2/templates/index.html
@@ -89,7 +89,7 @@
 
 
     {% block status_indicators %}   
-    <div class="row-fluid show-grid status-indicators">
+    <div class="row show-grid status-indicators">
         <div class="span12">
 
             <div class="row show-grid">
