--- a/alerta/api/v2/templates/index.html
+++ b/alerta/api/v2/templates/index.html
@@ -59,9 +59,9 @@
         <tr>
             <td>
                 <div id="status-select" class="btn-group" data-toggle="buttons-checkbox">
-                  <button type="button" class="status-select btn active" value="open">Open <span id="count-open" class="label">0</span></button>
-                  <button type="button" class="status-select btn" value="ack">Ack <span id="count-ack" class="label">0</span></button>
-                  <button type="button" class="status-select btn" value="closed">Closed <span id="count-closed" class="label">0</span></button>
+                  <button id="status-select-open" type="button" class="btn active" value="open">Open <span id="count-open" class="label">0</span></button>
+                  <button id="status-select-ack" type="button" class="btn" value="ack">Ack <span id="count-ack" class="label">0</span></button>
+                  <button id="status-select-closed" type="button" class="btn" value="closed">Closed <span id="count-closed" class="label">0</span></button>
                 </div>
             </td>
             <td>
@@ -298,7 +298,6 @@
     var api_port = {{ config['api_port'] }};
 </script>
 
-<script src="assets/bootstrap/js/bootstrap-button.js"></script>
 <script src="/alerta/dashboard/v2/assets/js/console.js"></script>
 
 {% block initialiser %}
