--- a/alerta/api/v2/templates/dev.html
+++ b/alerta/api/v2/templates/dev.html
@@ -173,6 +173,8 @@
 <script>
     $(document).ready(function() {
 
+        heartbeatAlerts();
+
         var env_filter = '&environment=RELEASE|QA|TEST|CODE|DEV|GUDEV|STAGE|LWP';
         var asiFilters = {
             'R2R1':             '&service=R2|R1',
