fix responsive navbar menu

--- a/alerta/api/v2/templates/index.html
+++ b/alerta/api/v2/templates/index.html
@@ -326,6 +326,7 @@
 {% endblock %}
 
 <script src="/alerta/dashboard/v2/assets/DataTables/bootstrap/dataTables.bootstrap.js"></script>
+<script src="/alerta/dashboard/v2/assets/bootstrap/js/bootstrap-collapse.js"></script>
 <script src="/alerta/dashboard/v2/assets/bootstrap/js/bootstrap-alert.js"></script>
 </body>
 </html>
