--- a/dashboard/v2/assets/css/custom.css
+++ b/dashboard/v2/assets/css/custom.css
@@ -1,7 +1,18 @@
 
+@font-face {
+    font-family: Sintony;
+    src: url('../fonts/Sintony-Regular.ttf');
+}
+
+@font-face {
+    font-family: Sintony;
+    font-weight: bold;
+    src: url('../fonts/Sintony-Bold.ttf');
+}
+
 table {
     margin: 0;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: Sintony, "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 12px;
     line-height: 14px;
     color: #333333;
