Working selection mechanism

--- a/alerta/api/v2/templates/index.html
+++ b/alerta/api/v2/templates/index.html
@@ -19,7 +19,7 @@
         }
     </style>
     <link href="/alerta/dashboard/v2/assets/css/custom.css" rel="stylesheet">
-
+    <link href="/alerta/dashboard/v2/assets/DataTables/extras/TableTools/media/css/TableTools.css" rel="stylesheet">
 </head>
 
 <body>
@@ -327,8 +327,10 @@
 </script>
 {% endblock %}
 
+<script src="/alerta/dashboard/v2/assets/DataTables/extras/TableTools/media/js/TableTools.min.js"></script>
 <script src="/alerta/dashboard/v2/assets/DataTables/bootstrap/dataTables.bootstrap.js"></script>
 <script src="/alerta/dashboard/v2/assets/bootstrap/js/bootstrap-collapse.js"></script>
 <script src="/alerta/dashboard/v2/assets/bootstrap/js/bootstrap-alert.js"></script>
+
 </body>
 </html>
